--- a/Tip Calculator.ipynb
+++ b/Tip Calculator.ipynb
@@ -13,7 +13,22 @@
    "execution_count": null,
    "id": "5f5ff092-33e3-42d2-bcdb-afc3b9499323",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the tip calculator!!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What was the total bill?  1250\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Welcome to the tip calculator!!\")\n",
     "total_bill = float(input(\"What was the total bill? \"))\n",
@@ -34,6 +49,14 @@
     "\n",
     "print(f\"Each person should contribute ${message} towards the bill.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85231375-2d10-4d8c-942a-6f3711e99698",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
