--- a/Tip Calculator.ipynb
+++ b/Tip Calculator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5f5ff092-33e3-42d2-bcdb-afc3b9499323",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,29 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What was the total bill?  1250\n"
+      "What was the total bill?  1250\n",
+      "What percentage tip would you like to give? (eg.15, 20, 15)  25\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total bill would amount to: $1562\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many people to split the bill?  11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Each person should contribute $142.05 towards the bill.\n"
      ]
     }
    ],
@@ -51,12 +73,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85231375-2d10-4d8c-942a-6f3711e99698",
+   "cell_type": "markdown",
+   "id": "6a24aa95-1021-4b48-a208-90e465cedfa7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
